--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sunset_time",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+	"node": "4.2.6"
+  },
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
